# dd_molview

./: .gitignore  CMakeLists.txt  README.jp.md  README.md
data/: sample_manifest.json
python/: dd_cview_backend.py
python/dd_cview_core/: __init__.py  collections.py  dashboard.py  sequence.py
python/tests/: conftest.py  test_collections.py  test_dashboard.py  test_sequence.py
src/: DisplaySettingsPanel.cpp  DisplaySettingsPanel.h  MainWindow.cpp  MainWindow.h  PythonBridge.cpp  PythonBridge.h  SequencePanel.cpp  SequencePanel.h  TableModel.cpp  TableModel.h  Viewer3D.cpp  Viewer3D.h  main.cpp
tests/: CMakeLists.txt  bridge_test.cpp
